# claude-mpm

./: .claude_todo  .gh-account  .gitignore  .kuzu-memory-config  .mcp.backup.20260214_032327.json  .pre-commit-config.yaml  .ruff.toml  .secrets.baseline  .tool-versions  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DIAGNOSTIC_REPORT.md  DOCUMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  Makefile  README.md  RELEASE_NOTES_3.6.0.md  RELEASE_NOTES_3.6.1.md  SKILLS_OPTIMIZE_README.md  TOKEN_USAGE_NEXT_STEPS.md  VERSION  bobmatnyc-claude-mpm-4.0.3.tgz  framework_loader_output.txt  mcp-vector-search  package.json  pyproject.toml  requirements.txt  vite.config.js
.ai-trackdown/: config.yaml
.github/: CODEOWNERS
.github/workflows/: release.yml  structure-lint.yml
.mcp-vector-search/: config.json  index_metadata.json  search_history.json
.mcp-vector-search/7ad702bf-0376-4cda-98c2-2eb37f67f101/: index_metadata.pickle
_archive/2026-02-sessions/: DOCUMENTATION_CLEANUP_REPORT_2026-02-18.md  DOCUMENTATION_REORGANIZATION_PLAN_2026-02-18.md  DOCUMENTATION_REVIEW_SUMMARY_2026-02-18.md  DOCUMENTATION_UPDATE_SUMMARY_2026-02-18.md  EXTERNAL_PACKAGE_SETUP_AUDIT_2026-02-18.md  MERMAID_IMPLEMENTATION_SUMMARY_2026-02-10.md  MULTI_ACCOUNT_SETUP_SUMMARY_2026-02-19.md  PENDING_TASKS_2026-02-08.md  README.md  STOP_EVENT_INVESTIGATION_FINAL_2026-02-07.md  TOKEN_EMISSION_DIAGNOSTIC_2026-02-07.md  TOKEN_TRACKING_DEBUG_SUMMARY_2026-02-07.md  TOKEN_USAGE_STRUCTURE_COMPARISON_2026-02-07.md
config/: experimental_features.json.example
docs/: AGENTS.md  CLI_RESUME_FLAG.md  DEPLOY.md  DOCUMENTATION_UPDATE_SUMMARY.md  EVENT_DELIVERY_HARDENING.md  HEARTBEAT.md  MCP_IMPLEMENTATION.md  MCP_USAGE.md  MEMORY_simplified.md  PROJECT_AGENTS.md  README.md  RELEASE_PROCESS.md  STRUCTURE.md  STRUCTURE_LINTING.md  google-workspace-mcp-mermaid.md  messaging-sqlite-migration.md
docs/_archive/: IMPLEMENTATION_SUMMARY.md  REORGANIZATION-SUMMARY.md
docs/architecture/: NETWORK_PORTS_CONFIGURATION.md  autotodos-architecture-fix.md  simplified-deployment-model.md
docs/archive/: LOGGING.md
docs/design/: websocket-api.md
docs/developer/: DEPRECATION_POLICY.md  DISTRIBUTED_SCRIPTS.md  EXPERIMENTAL_FEATURES.md  INSTALLATION_POLICY.md  token-usage-verification-findings.md  tools-framework-guide.md
docs/development/: DASHBOARD_FILE_TREE_ENHANCEMENTS.md  DOCUMENTATION-AUDIT.md  DOCUMENTATION-STANDARDS.md  README.md  agentskills-spec-implementation.md
docs/features/: README.md  TASK_INJECTION_SUMMARY.md  autotodos-architecture.md  domain-authority-system.md  incremental-pause-workflow.md  mcp-skillset-integration.md  mpm-integrate.md  task-injection.md
docs/fixes/: dashboard-event-parsing-fix.md
docs/getting-started/: README.md  VERSION_POLICY.md  absolute-beginners-guide.md  incremental-pause-quickstart.md  installation.md  quick-start.md  tutorial.md
docs/guides/: README.md  asdf-tool-versions.md  github-multi-account-setup.md  package-installer-uv-fix.md
docs/integrations/: CONFLUENCE_SETUP.md  LSP_SETUP.md  NOTION_SETUP.md  README-old.md  README.md  SLACK_SETUP.md  SLACK_USER_PROXY_SETUP.md  gworkspace-mcp.md  kuzu-memory.md  mcp-session-server.md  mcp-vector-search.md  slack-setup.md  slack.md
docs/issues/: 811-false-positive-skill-warnings.md  dashboard-multi-project-awareness.md
docs/reference/: agent-skills-mapping.json
docs/release-notes/: RELEASE_NOTES_3.6.0.md  RELEASE_NOTES_3.7.1.md  RELEASE_NOTES_3.7.2.md  RELEASE_NOTES_3.9.10.md  RELEASE_NOTES_3.9.11.md  v3.x.md  v4.0.x.md
docs/research/: agent-loading-delegation-matrix-2025-02-06.md
docs/security/: path-validation-fix-2026-02-18.md
docs/troubleshooting/: browser-extension-errors.md
docs/user/: skills-optimize.md  troubleshooting.md  websocket-api.md
examples/: context_usage_tracker_example.py  incremental_pause_usage.py
npm-bin/: claude-mpm.js
scripts/: README.md  README_RELEASE.md  analyze_codebase.py  analyze_hook_structure.py  app.py  automated_release.py  browser_debug_events.js  claude-mpm-socketio  cleanup_obsolete_files.py  debug_cli.py  debug_event_history.py  debug_hook_events.py  debug_instructions.py  debug_qa.py  debug_search.py  debug_search_detailed.py  debug_search_v2.py  delegation_matrix_poc.py  demo_event_fix.py  demo_port_conflict_resolution.py  detect-mcp-services  find_unused_code.py  fix_path_imports.py  gh-claude-mpm  git-claude-mpm  install_structure_linting.sh  patch_assistant_response_usage.py  post_refactor_cleanup.py  register_mcp_gateway.py  release_workflow.sh  remove_duplicate_files.py  remove_obsolete_files.sh  restart_dashboard.sh  run_all_tests.sh  run_socketio_debug.py  save_loaded_instructions.py  setup-git-hooks.sh  show_framework_loader_output.py  sync_agent_skills_repos.sh  test_hook_routing_regression.sh  (+9 more)
scripts/development/: run_lint.sh
src/claude_mpm/: __init__.py  (+2 more)
tests/: conftest.py  diagnostic_connection_auth_test.py  diagnostic_end_to_end_test.py  diagnostic_hook_handler_test.py  live_token_test.py  mpm_test.py  simple_agent_test.py  simple_socket_test.py  test_agent_configuration_manager.py  test_agent_deployment.py  test_agent_deployment_baseline.py  test_agent_deployment_comprehensive.py  test_agent_deployment_refactoring.py  test_agent_deployment_state_detection.py  test_agent_deployment_system.py  test_agent_deployment_unified_interface.py  test_agent_discovery_service.py  test_agent_environment_manager.py  test_agent_format_converter.py  test_agent_lifecycle_manager.py  test_agent_loader_format.py  test_agent_management.py  test_agent_memory_manager.py  test_agent_metrics_collector.py  test_agent_name_normalization.py  test_agent_registry.py  test_agent_registry_cache.py  test_agent_template_builder.py  test_agent_version_manager.py  test_agentic_coder_optimizer.py  test_archive_manager.py  test_autotodos_working_dir.py  test_backup_manager.py  test_cache_behavior.py  test_claude_hook_handler.py  test_claude_hook_integration.py  test_claude_mpm_directory_loading.py  test_code_tree_analyzer.py  test_config_api_business_rules.py  test_config_api_deployment.py  (+159 more)
(+761 files in other folders)
